--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,6 @@
 // Variables
-@import "bs4/variables";
+@import "variables";
+@import "resources/assets/css/feedler";
 
 // Bootstrap
 @import "node_modules/bootstrap/scss/bootstrap";
